--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
         const boardWidth = canvas.width / tileSize;
         const boardHeight = canvas.height / tileSize;
 
-        let snake = [{ x: 8, y: 8 }];
-        let direction = 'RIGHT';
-        let food = getRandomFoodPosition();
-        let score = 0;
+        let snake, direction, food, score, gameInterval;
 
         // Movement key codes for arrow keys
         const directionMap = {
@@ -42,6 +39,16 @@
             'ArrowLeft': 'LEFT',
             'ArrowRight': 'RIGHT'
         };
+
+        // Initialize the game state
+        function initializeGame() {
+            snake = [{ x: 8, y: 8 }];
+            direction = 'RIGHT';
+            food = getRandomFoodPosition();
+            score = 0;
+            clearInterval(gameInterval);
+            gameInterval = setInterval(update, 100); // Update every 100ms
+        }
 
         // Handle keyboard input
         document.addEventListener('keydown', (e) => {
@@ -132,12 +139,19 @@
             ctx.fillText('Game Over!', canvas.width / 2 - 90, canvas.height / 2);
             ctx.font = '20px Arial';
             ctx.fillText('Final Score: ' + score, canvas.width / 2 - 60, canvas.height / 2 + 30);
-            clearInterval(gameInterval);
+            
+            // Prompt for restart
+            setTimeout(() => {
+                const restart = confirm('Do you want to play again?');
+                if (restart) {
+                    initializeGame(); // Restart the game
+                }
+            }, 1000); // Delay restart prompt for 1 second
         }
 
-        // Game loop
-        const gameInterval = setInterval(update, 100); // Update every 100ms
-
+        // Initialize the game
+        initializeGame();
     </script>
 </body>
 </html>
+
